deploy/asapo_helm_chart/asapo/templates/authorizer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorizer
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5007
  selector:
    app: authorizer
